--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,16 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".EstadisticasActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".DesafioActivity"
+            android:exported="true">
+        </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
